--- a/Origamid/BikeCraft/style/style.css
+++ b/Origamid/BikeCraft/style/style.css
@@ -3,6 +3,29 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
 }
+p{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 14px;
+    line-height: 20px;
+}
+.btn{
+    border: 3px solid #fec63e;
+    padding: 10px 30px;
+    color: #fec63e;
+
+    font-size: 14px;
+    font-weight: bold;
+    line-height: 20px;
+    text-transform: uppercase;
+    letter-spacing: .1em;
+
+    transition: 0.5s;
+}
+
+.btn:hover{
+    color: #FFF;
+    border-color: #FFF;
+}
 
 /* Header */
 
@@ -37,5 +60,51 @@ body{
 .headerMenu ul li a:hover{
     color: white;
 }
+
 /* Introdução */
 
+.introducao{
+    width: 100%;
+    height: 380px;
+
+    background: url(../assets/bg.jpg) no-repeat center;
+    background-size: cover;
+
+    margin-top: 96px;
+    padding-top: 80px;
+    text-align: center;
+}
+
+.introducao h1{
+    font-size: 48px;
+    font-weight: bold;
+    color: #FFF;
+    text-transform: uppercase;
+}
+
+.quote-externo{
+    max-width: 320px;
+    margin: 0 auto;
+    color: #FFF;
+    margin-bottom: 40px;
+}
+
+.quote-externo p{
+    font-style: italic;
+}
+
+.quote-externo p:before, .quote-externo p:after{
+    content: "";
+    display: block;
+    width: 60px;
+    height: 3px;
+    background: #FFF;
+    margin: 15px auto 10px auto;
+}
+
+.quote-externo cite{
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    letter-spacing: .1em;
+}
