--- a/Origamid/BikeCraft/style/style.css
+++ b/Origamid/BikeCraft/style/style.css
@@ -8,6 +8,11 @@ p{
     font-size: 14px;
     line-height: 20px;
 }
+
+img{
+    display: block;
+}
+
 .btn{
     border: 3px solid #fec63e;
     padding: 10px 30px;
@@ -96,7 +101,7 @@ p{
     background: url(../assets/bg.jpg) no-repeat center;
     background-size: cover;
 
-    margin-top: 96px;
+    margin-top: 92px;
     padding-top: 80px;
     text-align: center;
 }
@@ -144,6 +149,10 @@ p{
 .produtos_lista li{
     background: #fec63e;
     text-align: center;
+}
+
+.produtos_lista li img{
+    margin: 0 auto;
 }
 
 .produtos_lista li h3{
@@ -205,4 +214,54 @@ p{
 
 .portfolio .call p{
     color: #FFF;
+}
+
+/*  Qualidade  */
+
+.qualidade{
+    padding: 60px 0;
+}
+
+.qualidade:after{
+    content: '';
+    width: 634px;
+    height: 83px;
+    display: block;
+    background: url(../assets/linhas.svg) no-repeat center;
+
+    position: absolute;
+    top: 209px;
+    right: 162px;
+    z-index: -1;
+}
+
+.qualidade img {
+    margin: 0 auto;
+}
+
+.qualidade-lista > li{
+    text-align: center;
+    padding: 0 40px;
+}
+
+.qualidade-lista{
+    padding-top: 20px;
+}
+
+.qualidade-lista li h3{
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 24px;
+    text-transform: uppercase;
+    letter-spacing: .1em;
+    margin-top: 20px;
+}
+
+.qualidade-lista li h3::after{
+    content: "";
+    display: block;
+    width: 60px;
+    height: 3px;
+    background: #000;
+    margin: 6px auto;
 }
