--- a/Origamid/BikeCraft/style/produtos.css
+++ b/Origamid/BikeCraft/style/produtos.css
@@ -2,3 +2,62 @@
     background: url(../assets/bg-produtos.jpg) no-repeat center;
     background-size: cover;
 }
+
+.produto-item{
+    padding-top: 60px;
+}
+
+.produto-item h2{
+    font-size: 36px;
+    font-weight: bold;
+    color: #FFF;
+    text-transform: uppercase;
+    letter-spacing: .1em;
+
+    position: relative;
+    top: -180px;
+    text-align: center;
+    margin-bottom: -56px;
+}
+
+.produto-item h2:before{
+    content: '';
+    display: block;
+    width: 60px;
+    height: 3px;
+    background: #FFF;
+    margin: 6px auto 8px auto;
+}
+
+.produto-item h2:after{
+    content: '';
+    display: block;
+    width: 60px;
+    height: 3px;
+    background: #FFF;
+    margin: 6px auto 8px auto;
+}
+
+.produto-icone{
+    background-color: #000;
+    padding: 70px 0;
+}
+
+.produto-icone img{
+    margin: 0 auto;
+}
+
+.produto-info{
+    background: #000;
+}
+
+.produto-info p{
+    color: #FFF;
+    font-size: 18px;
+    line-height: 25px;
+    padding: 30px 40px;
+}
+
+.produto-info ul li{
+    
+}
