--- a/Origamid/BikeCraft/style/produtos.css
+++ b/Origamid/BikeCraft/style/produtos.css
@@ -85,3 +85,69 @@
 .produto-info ul li:nth-child(even){
     margin-left: 2px;
 }
+
+/* Orçamento */
+
+.orcamento{
+    background: #000;
+    width: 100%;
+    margin-top: 60px;
+    padding: 40px 0;
+}
+
+.orcamento h2{
+    color: #fec63e;
+}
+
+.orcamento h2:after{
+    background-color: #fec63e;
+}
+
+#form-orcamento{
+    padding-right: 60px;
+}
+
+#form-orcamento label{
+    display: block;
+    color: #FFF;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 18px;
+    line-height: 25px;
+    margin-bottom: 4px;
+}
+
+#form-orcamento input{
+    display: block;
+    width: 100%;
+    padding: 7px 10px;
+    margin-bottom: 10px;
+
+    border: 4px solid #fec63e;
+    color: #fff;
+    background: none;
+    outline: 0;
+    font-size: 14px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+#form-orcamento textarea{
+    display: block;
+    width: 100%;
+    height: 120px;
+    padding: 7px 10px;
+    margin-bottom: 20px;
+
+    border: 4px solid #fec63e;
+    color: #fff;
+    background: none;
+    outline: 0;
+    font-size: 14px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    resize: none;
+}
+
+#form-orcamento button{
+    padding: 7px 40px;
+    cursor: pointer;
+    background: none;
+}
