--- a/Origamid/BikeCraft/style/style.css
+++ b/Origamid/BikeCraft/style/style.css
@@ -424,4 +424,26 @@ img{
     background: #fec454;
   }
 
+/* 6 Simple Anime */
+[data-anime] {
+    opacity: 0;
+  }
+  .anime {
+    opacity: 1;
+    transform: none;
+    transition: transform .8s, opacity .8s;
+  }
   
+  /* 6 CSS personalizado dependendo da animação desejada */
+  .fadeInDown {
+    transform: translate3d(0,-20px,0);
+  }
+  .fadeInUp {
+    transform: translate3d(0,20px,0);
+  }
+  .fadeInRight {
+    transform: translate3d(20px,0,0);
+  }
+  .fadeInLeft {
+    transform: translate3d(-20px,0,0);
+  }
