--- a/AnimaisFantasticos/style/style.css
+++ b/AnimaisFantasticos/style/style.css
@@ -5,8 +5,71 @@
     border: 0;
     box-sizing: border-box;
 }
-html,body{
-    height: 100%;
+
+body{
+    background: #faf6ed;
+    color: #222;
+    -webkit-font-smoothing: antialiased;
+    display: grid;
+    grid-template-columns: 1fr 120px minmax(300px 800px) 1fr;
 }
 
-/*** Reset do documento ***/
+h1, h2, ul, li, p, dd, dt, dl {
+    padding: 0px;
+    margin: 0px;
+}
+
+img{
+    display: block;
+    max-width: 100%;
+}
+
+ul{
+    list-style-type: none;
+}
+
+/*** Menu ***/
+
+.menu{
+    grid-column: 3 / 5;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    background: #FB5;
+}
+
+.menu ul{
+    display: flex;
+    flex-wrap: wrap;
+    padding: 10px;
+}
+
+.menu li a{
+    display: block;
+    padding: 10px;
+    margin-right: 10px;
+    color: #222;
+    text-decoration: none;
+    font-family: monospace;
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: .875rem;
+    letter-spacing: .1em;
+}
+
+/*** GRID SECTION ***/
+
+.grid-section{
+    display: grid;
+    grid-template-columns: 90px 300px 1fr;
+    grid-gap: 120px;
+
+    grid-column: 2 / 4;
+    width: 100%;
+    box-sizing: border-box;
+    padding: 10px;
+    margin-bottom: 4rem;
+}
+
+.titulo{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
