--- a/AnimaisFantasticos/style/style.css
+++ b/AnimaisFantasticos/style/style.css
@@ -72,4 +72,157 @@ ul{
 
 .titulo{
     font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 6rem;
+    font-weight: normal;
+    line-height: 1;
+    grid-column: 1 / 4;
+}
+
+.animais h2{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 1rem;
+    text-transform: uppercase;
+    letter-spacing: .1em;
+    margin-bottom: 1rem;
+    color: #E54;
+}
+
+.animais h2::before{
+    content: '';
+    display: inline-block;
+    width: 40px;
+    height: 10px;
+    margin-right: 10px;
+    background: #fb5;
+}
+
+.animais p{
+    font-family: Helvetica, sans-serif;
+    line-height: 1.2;
+    margin-bottom: 1rem;
+}
+
+.animais-list{
+    height: 370px;
+    overflow-y: scroll;
+    grid-column: 2;
+}
+
+.animais-list::-webkit-scrollbar {
+    width: 18px;
+}
+
+.animais-list::-webkit-scrollbar-thumb {
+    background: #FB5;
+    border-left: 4px solid #faf6ed;
+    border-right: 4px solid #faf6ed;
+}
+
+.animais-list::-webkit-scrollbar-track {
+    background: #faf6ed;
+}
+
+.animais-descricao{
+    grid-column: 3;
+}
+
+.animais-descricao section{
+    margin-bottom: 3rem;
+}
+
+.faq-lista{
+    grid-column: 2 / 4;
+}
+
+.faq-lista dt{
+    font-size: 20px;
+    font-family: monospace;
+    font-weight: bold;
+    margin-top: 2rem;
+    margin-bottom: .5rem;
+    color: #E54;
+}
+
+.faq-lista dt::before{
+    content: '';
+    display: inline-block;
+    width: 20px;
+    height: 10px;
+    margin-right: 10px;
+    background: #FB5;
+}
+
+.faq-lista dd{
+    font-family: Helvetica, sans-serif;
+    margin-bottom: .5rem;
+    margin-left: 30px;
+}
+
+.mapa{
+    grid-column: 2;
+}
+
+.dados{
+    grid-column: 3;
+}
+
+.dados li{
+    margin-bottom: 1rem;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+
+.dados li::before{
+    content: '';
+    display: inline-block;
+    width: 20px;
+    height: 10px;
+    margin-right: 10px;
+    background: #FB5;
+}
+
+.copy{
+    grid-column:  3 / 5;
+    margin-bottom: 2rem;
+    background: #FB5;
+}
+
+.copy p {
+    padding: 20px;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+
+
+@media screen and (max-width: 700px){
+    body{
+        grid-template-columns: 1fr;
+    }
+
+    .menu, .grid-section, .copy{
+        grid-column: 1;
+    }
+
+    .grid-section{
+        grid-template-columns: 100px 1fr;
+        grid-gap: 10px;
+    }
+
+    .animais-list{
+        grid-column: 1;
+    }
+
+    .faq-lista, .dados, .mapa{
+        grid-column: 1 / 3;
+    }
+
+    .grid-section h1{
+        font-size: 3rem;
+    }
+
+    .menu{
+        margin-top: 0;
+    }
+    
+    .copy{
+        margin-bottom: 0;
+    }
 }
