--- a/AnimaisFantasticos/style/style.css
+++ b/AnimaisFantasticos/style/style.css
@@ -103,6 +103,7 @@ ul{
 }
 
 .animais-list{
+    cursor: pointer;
     height: 370px;
     overflow-y: scroll;
     grid-column: 2;
@@ -190,6 +191,53 @@ ul{
     padding: 20px;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
+
+/***************************************************************************/
+
+.js-tabcontent section{
+    display: none;
+}
+
+.js-tabcontent section.ativo{
+    display: block !important;
+    animation: show .5s forwards;
+}
+
+@keyframes show{
+    from {
+        opacity: 0;
+        transform: translate3d(-30px, 0, 0);
+    }
+
+    to {
+        opacity: 1;
+        transform: translate3d(0, 0, 0);
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 @media screen and (max-width: 700px){
