--- a/AnimaisFantasticos/style/style.css
+++ b/AnimaisFantasticos/style/style.css
@@ -215,7 +215,39 @@ ul{
     }
 }
 
+/***************************************************************************/
 
+.js-accordion dd{
+    display: none;
+}
+
+.js-accordion dt::after{
+    content: '🠗';
+    margin-left: 10px;
+}
+
+.js-accordion dt.ativo::after{
+    content: '🠕';
+}
+
+.js-accordion dd.ativo {
+    display: block;
+    animation: slideDown .5s forwards;
+}
+
+@keyframes slideDown{
+    from {
+        opacity: 0;
+        max-height: 0;
+    }
+
+    to{
+        opacity: 1;
+        max-height: 200px;
+    }
+}
+
+/***************************************************************************/
 
 
 
